--- a/main.ipynb
+++ b/main.ipynb
@@ -603,7 +603,7 @@
     }
    ],
    "source": [
-    "# let's have a look at some interesting features\n",
+    "# let's have a look at the most interesting features\n",
     "# host-id/price -> target encoding?\n",
     "# host availability/price -> target encoding? \n",
     "\n",
