--- a/main.ipynb
+++ b/main.ipynb
@@ -1232,7 +1232,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# learining: definitely a corelation between the room_type and the price, which is very similar for all neighbourhood_groups "
+    "# learining: definitely a corelation between the room_type and the price, which is very similar for all neighbourhood_groups \n",
+    "# other learning: in this case it was much better to plot the categories against the y-axis"
    ]
   },
   {
