--- a/main.ipynb
+++ b/main.ipynb
@@ -1578,7 +1578,7 @@
     }
    ],
    "source": [
-    "# maybe some host_ids are only for luxury appartments. lets check that out\n",
+    "# maybe some host_ids are only for luxury appartments. \n",
     "df.groupby(['host_id']).price.agg([len, min, max]).sort_values(by='max', ascending=False)"
    ]
   },
