--- a/main.ipynb
+++ b/main.ipynb
@@ -1618,7 +1618,7 @@
     }
    ],
    "source": [
-    "# maybe we have to dig deeper in the neighbourhoods themselves \n",
+    "# maybe we have to dig deeper in the neighbourhoods  \n",
     "outlier_df = df.query(\"price > 1000\")\n",
     "sns.scatterplot(x=outlier_df[\"longitude\"], y=outlier_df[\"latitude\"])"
    ]
