--- a/main.ipynb
+++ b/main.ipynb
@@ -875,8 +875,8 @@
     }
    ],
    "source": [
-    "# Make a copy of the dataframe and drop rows with missing values\n",
-    "X_pi = df.copy().dropna()\n",
+    "# Drop rows with missing values\n",
+    "X_pi = df.dropna()\n",
     "\n",
     "# Pop the 'price' column to create the target variable\n",
     "y_pi = X_pi.pop('price') \n",
